--- a/JavaScript/Album1v1/styles.css
+++ b/JavaScript/Album1v1/styles.css
@@ -1,46 +1,143 @@
 body {
-    background-color: rgb(31, 0, 0);
+    background-color: white;
+    background-attachment: fixed;
+    font-family: Barlow, "Open Sans", "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: black;
+    padding: 0;
+    margin: 0;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    height:100vh;
-    width:100vw;
-    position:absolute;
-    top:0;
-    left:0;
-    overflow:hidden;
 }
 
-#matchup-container{
-    color:white;
-    display:inline-block;
-    height:1000px;
+#matchup-container {
+    color: black;
+    display: inline-block;
+    height: 1000px;
 }
 
-.album-container{
-    margin:200px;
-    margin-top:30px;
-    margin-bottom:20px;
-    width:500px;
-    height:500px;
-    float:left;
+.album-container {
+    margin: 200px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    width: 500px;
+    height: 500px;
+    float: left;
+    text-align: center;
 }
 
-.album-container>img{
-    width:400px;
-    height:400px;
+.album-container>img {
+    width: 400px;
+    height: 400px;
+    box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.7);
 }
 
-.toptext{
-    color:white;
+.toptext {
+    color: black;
 }
 
-#namefield{
+#namefield {
     width: 300px;
     height: 40px;
     font-size: 40px;
 }
 
-#winner{
+#winner {
     font-size: 60px;
-    color:white;
+    color: black;
+}
+
+.artist-container {
+    margin: 200px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    width: 500px;
+    height: 500px;
+    float: left;
+}
+
+.artist-container>img {
+    width: 400px;
+    height: 400px;
+}
+
+.track-container {
+    margin: 200px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    width: 500px;
+    height: 500px;
+    float: left;
+}
+
+.track-container>img {
+    width: 400px;
+    height: 400px;
+}
+
+.button {
+    display: inline;
+    margin-left: 30px;
+}
+
+.underline:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+#top {
+    color: black;
+    height: 80px;
+    width: 100%;
+    display: flex;
+    font-weight:700;
+    vertical-align: middle;
+    border-bottom: 1px solid #ebebeb;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+}
+
+#top h1 {
+    margin-left: 20px;
+}
+
+#round {
+    font-weight: 700px;
+    font-size: 30px;
+}
+
+a:link {
+    text-decoration: none;
+    color:black;
+    font-weight: lighter;
+}
+
+
+a:visited {
+    text-decoration: none;
+    color:black;
+}
+
+a:focus:after{
+    background-color: #b90000;
+    bottom: -2px;
+    height: 2px;
+}
+
+a:hover {
+    text-decoration: none;
+    padding-bottom:25px;
+    border-bottom: 3px solid #b90000;
+}
+
+
+a:active {
+    text-decoration: none;
+}
+
+
+#buttons {
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+    margin:auto;
+    margin-left:30px;
 }
