--- a/JavaScript/Album1v1/styles.css
+++ b/JavaScript/Album1v1/styles.css
@@ -1,11 +1,11 @@
 body {
     background-color: white;
-    background-attachment: fixed;
     font-family: Barlow, "Open Sans", "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: black;
-    padding: 0;
     margin: 0;
     text-align: center;
+    min-height:100%;
+    overflow: hidden;
 }
 
 #matchup-container {
@@ -17,9 +17,9 @@ body {
 .album-container {
     margin: 200px;
     margin-top: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 80px;
     width: 500px;
-    height: 500px;
+    height: 450px;
     float: left;
     text-align: center;
 }
@@ -27,7 +27,7 @@ body {
 .album-container>img {
     width: 400px;
     height: 400px;
-    box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.7);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .toptext {
@@ -38,39 +38,44 @@ body {
     width: 300px;
     height: 40px;
     font-size: 40px;
+    vertical-align: middle
 }
 
 #winner {
-    font-size: 60px;
+    font-size: 40px;
+    font-weight:lighter;
+    height:50px;
     color: black;
 }
 
 .artist-container {
     margin: 200px;
     margin-top: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 80px;
     width: 500px;
-    height: 500px;
+    height: 450px;
     float: left;
 }
 
 .artist-container>img {
     width: 400px;
     height: 400px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .track-container {
     margin: 200px;
     margin-top: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 80px;
     width: 500px;
-    height: 500px;
+    height: 450;
     float: left;
 }
 
 .track-container>img {
     width: 400px;
     height: 400px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .button {
@@ -78,17 +83,12 @@ body {
     margin-left: 30px;
 }
 
-.underline:hover:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-
 #top {
     color: black;
     height: 80px;
     width: 100%;
     display: flex;
-    font-weight:700;
+    font-weight: 700;
     vertical-align: middle;
     border-bottom: 1px solid #ebebeb;
     border-bottom-width: 1px;
@@ -102,29 +102,24 @@ body {
 #round {
     font-weight: 700px;
     font-size: 30px;
+    margin-bottom: 0px;
 }
 
 a:link {
     text-decoration: none;
-    color:black;
+    color: black;
     font-weight: lighter;
 }
 
 
 a:visited {
     text-decoration: none;
-    color:black;
-}
-
-a:focus:after{
-    background-color: #b90000;
-    bottom: -2px;
-    height: 2px;
+    color: black;
 }
 
 a:hover {
     text-decoration: none;
-    padding-bottom:25px;
+    padding-bottom: 24px;
     border-bottom: 3px solid #b90000;
 }
 
@@ -138,6 +133,56 @@ a:active {
     text-align: center;
     height: 50px;
     line-height: 50px;
-    margin:auto;
-    margin-left:30px;
+    margin: auto;
+    margin-left: 30px;
+}
+
+
+select {
+    width: 300px;
+    height: 50px;
+    background: #fbe9e9;
+    color: black;
+    font-size: 30px;
+    text-align: center;
+    border: 0px;
+}
+
+#submitButton {
+    vertical-align: middle;
+    height: 46px;
+    background: #fbe9e9;
+}
+
+#submitButton:hover {
+    background: #d88c8c;
+}
+
+#info-container {
+    display: flex;
+}
+
+#username-container {
+    margin-left: 5%;
+}
+
+#entrant-container {
+    margin-left: 5%;
+}
+
+
+footer {
+  background: black;
+  color:white;
+  width: 100%;
+  height: 40px;
+  padding-top: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+}
+
+footer p{
+    margin-top:7px;
 }
